fix: collapse taking all page width after animation

--- a/src/components/Collapse/Collapse.sass
+++ b/src/components/Collapse/Collapse.sass
@@ -82,6 +82,10 @@
 .collapse-medium
   @include collapse
   min-height: 52px
+  width: 45%
+  flex-grow: 1
+  @media (max-width: 768px)
+    width: 100%
   &__button
     @include collapse__button
     height: 52px
